--- a/index.html
+++ b/index.html
@@ -8,14 +8,35 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@600&family=Lora:wght@500&family=Varela&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Interview</title>
 </head>
 
 <body>
     <header>
-        <h1>Interview med RES-RES</h1>
+        <h1>RES-RES</h1>
+        <h3>Interview med Søren Sørensen</h3>
     </header>
-    <main></main>
+    <main>
+        <article>
+            <figure class="tall">
+                <img src="billeder/udenforhoej.webp" alt="">
+                <img src="billeder/hoejformat.webp" alt="" />
+                <img src="billeder/portraet.webp" alt="" />
+            </figure>
+
+        </article>
+        <video controls src="https://slowcreate.dk/kea/05_indhold/video/pilotvideo.mp4"></video>
+        <figure class="wide">
+            <img src="billeder/bredformat.webp" alt="" />
+            <img src="billeder/bredformat2.webp" alt="" />
+            <img src="billeder/udenforbred.webp" alt="" />
+        </figure>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/x5vu972x7jI?si=R1kUBHeP6w28v2Gr"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+    </main>
 </body>
 
 </html>
