--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
             </figure>
             <video controls src="https://slowcreate.dk/kea/05_indhold/video/pilotvideo.mp4"></video>
         </article>
+        <figure class="tekst">
+            <h3>Medvirkende:</h3>
+            <ul>
+                <li>Søren Sørensen</li>
+                <li>Laura Backe</li>
+                <li>Selma L. Ø. Kangas-Kärki</li>
+            </ul>
+        </figure>
         <figure class="wide">
             <img src="billeder/bredformat.webp" alt="" />
             <img src="billeder/bredformat2.webp" alt="" />
